--- a/Web Development/Web development overzicht.html
+++ b/Web Development/Web development overzicht.html
@@ -12,6 +12,6 @@
 <p><a href="Labo 3.html"><strong>LABO 3</strong></a></p>
 <p><a href="Labo 4.html"><strong>LABO 4</strong></a></p>
 <p><a href="Labo CSS deel 1.html"><strong>LABO CSS 1</strong></a></p>
-
+<p><a href="Labo CSS deel 2.html"><strong>LABO CSS 2</strong></a></p>
 </body>
 </html>
