--- a/Web Development/Labo CSS deel 2.html
+++ b/Web Development/Labo CSS deel 2.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Labo CSS deel 2</h1>
-<h2>Nog bezig met afwerken.</h2>
+
+<p><a href="">Opdracht Resume</a></p>
+
 </body>
 </html>
