--- a/Labo CSS deel 2/Opdracht 1/Opdracht 1.html
+++ b/Labo CSS deel 2/Opdracht 1/Opdracht 1.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 1</title>
     <style>
         .menuitem {
-    display:inline-block;
-    width:150px;
-    }
-    .menuitem > a {
-    color:red;
-    }
+            display:inline-block;
+            width:150px;
+        }
+        .menuitem > a {
+            color:red;
+        }
     </style>
 </head>
 <body>
-
-<ul class="menuitem">
-    <li><a href="...">products</a></li>
-    <li><a href="...">distributors</a></li>
-    <li><a href="...">contact</a></li>
+<ul>
+    <li class="menuitem"><a href="Opdracht1.html">products</a></li>
+    <li class="menuitem"><a href="Opdracht1.html">distributors</a></li>
+    <li class="menuitem"><a href="Opdracht1.html">contact</a></li>
 </ul>
 </body>
 </html>
