--- a/Overzicht labo's/Web development overzicht.html
+++ b/Overzicht labo's/Web development overzicht.html
@@ -13,5 +13,6 @@
 <p><a href="Labo 4.html"><strong>LABO 4</strong></a></p>
 <p><a href="Labo CSS deel 1.html"><strong>LABO CSS 1</strong></a></p>
 <p><a href="Labo CSS deel 2.html"><strong>LABO CSS 2</strong></a></p>
+<p><a href="Labo CSS deel 3.html"><strong>LABO CSS 3</strong></a></p>
 </body>
 </html>
