--- a/Overzicht labo's/Web development overzicht.html
+++ b/Overzicht labo's/Web development overzicht.html
@@ -9,11 +9,16 @@
 <h1>Web Development</h1>
 <p><a href="https://github.com/GillesDumont/GillesDumont.github.io/tree/main/Labo%201"><strong>LABO 1</strong></a></p>
 <p><a href="https://github.com/GillesDumont/GillesDumont.github.io/tree/main/Labo%202"><strong>LABO 2</strong></a></p>
-<p><a href="Labo 3.html"><strong>LABO 3</strong></a></p>
-<p><a href="Labo 4.html"><strong>LABO 4</strong></a></p>
-<p><a href="Labo CSS deel 1.html"><strong>LABO CSS 1</strong></a></p>
-<p><a href="Labo CSS deel 2.html"><strong>LABO CSS 2</strong></a></p>
-<p><a href="Labo CSS deel 3.html"><strong>LABO CSS 3</strong></a></p>
+<p><a href="Labo's/Labo 3.html"><strong>LABO 3</strong></a></p>
+<p><a href="Labo's/Labo 4.html"><strong>LABO 4</strong></a></p>
+<p><a href="Labo's/Labo CSS deel 1.html"><strong>LABO CSS 1</strong></a></p>
+<p><a href="Labo's/Labo CSS deel 2.html"><strong>LABO CSS 2</strong></a></p>
+<p><a href="Labo's/Labo CSS deel 3.html"><strong>LABO CSS 3</strong></a></p>
+<p><a href="Labo's/Labo CSS deel 4.html"><strong>LABO CSS 4</strong></a></p>
+<p><a href="Labo's/Labo 8.html"><strong>LABO 8</strong></a></p>
+<p><a href="Labo's/Labo 9.html"><strong>LABO 9</strong></a></p>
+<p><a href="Labo's/Labo 10.html"><strong>LABO 10</strong></a></p>
+<p><a href="Labo's/Labo 11.html"><strong>LABO 11</strong></a></p>
 
 </body>
 </html>
